--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -12,7 +12,7 @@
 /* styles.css */
 body{
     color:rgb(237, 243, 243);
-    background-image: url('/Users/manyasingh/Desktop/Forget_Me_Not/my-app/public/img.png');
+    background-image: url(C:\PESU\Sem4\Kalpana_2024\Forget_Me_Not\my-app\public\img.png);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
