--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -12,13 +12,13 @@
 /* styles.css */
 body{
     color:rgb(237, 243, 243);
-    background-image: url(/Users/manyasingh/Desktop/Forget_Me_Not/my-app/public/img.png);
+    background-image: url(C:\PESU\Sem4\Kalpana_2024\Forget_Me_Not\my-app\public\img.png);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  height: 300px;
+  height: 200vh;
+  
   margin: 0;
   overflow-y: scroll;
     
@@ -115,6 +115,7 @@ button:hover {
   } */
 
   footer {
+    display: flex;
     position: fixed;
     left: 0;
     bottom: 0;
@@ -125,7 +126,7 @@ button:hover {
     font-weight: bold;
     height: 100px; /* Set the height of your footer */
   }
-  
+
 h1::before {  
     transform: scaleX(0);
     transform-origin: bottom right;
