--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -48,10 +48,11 @@ button {
   font-size: 16px;
   font-size: 18px; /* Increased font size */
   line-height: 28px; /* Adjusted line height */
-  padding: 20px 30px; /* Increased padding */
+ 
+ 
   font-weight: 700;
   line-height: 24px;
-  padding: 16px 23px;
+  
   position: relative;
   text-decoration: none;
   user-select: none;
@@ -86,7 +87,7 @@ button:hover:before {
 }
 
 @media (min-width: 768px) {
-  .button-51 {
+  button {
     padding: 16px 32px;
     padding: 20px 40px; /* Adjusted padding */
   }
@@ -114,7 +115,7 @@ button:hover {
     flex-direction: column;
   } */
 
-  footer {
+footer {
     position: fixed;
     left: 0;
     bottom: 0;
@@ -124,7 +125,7 @@ button:hover {
     text-align: center;
     font-weight: bold;
     height: 100px; /* Set the height of your footer */
-  }
+}
   
 h1::before {  
     transform: scaleX(0);
@@ -279,6 +280,15 @@ font-size: xx-large;
     font-weight: bold;
     padding: 50px;
     
+}
+
+.bottom-container{
+  background-color: rgb(228, 240, 225);
+  display: block;
+  padding: 1px 0 2px;
+  font-weight: bold;
+  position: relative;
+  height: 80px;
 }
 
   
